----------------------------------------------------------------
mirt 0.4.0
----------------------------------------------------------------

* Added free.start list option for all estimation functions. Allows a quicker way to 
  specify free and fixed parameters

* Added iteminfo() and extract.item() to calculate the item information and extract 
  desired items

* Multiple group estimation available with the multipleGroup() function. Uses the EM and MHRM
  as the estimation engines, with the EM as default. The MHRM seems to be faster at two factors+
  though and naturally should be more accurate, therefore it is set as the default

* wald() function added for testing linear constraints. Useful in multiple group situations
  for testing individual parameters rather than always estimating a new model

* Methods that use the MHRM can now estimate the nominal, gpcm, mcm, and 4PL models

* fscores computable for multiple group objects and in general play nicer with missing data
  (reported by Judith Conijn)

* Oblique rotation bug fix for fscores and coef (reported by Pedro A. Barbetta)  

* Added the item probability functions in the ?mirt documentation for reference

* General bug fixes as usual that were spawned from all the added features 

----------------------------------------------------------------
mirt 0.3.1
----------------------------------------------------------------

* Individual classes now correspond to the type of methods: ExploratoryClass, 
  ConfirmatoryClass, and MultipleGroupClass

* plot and itemplot now works for confmirt objects

* mirt can now make use of confmirt.model specified objects and hence be confirmatory as well 

* stochastic estimation of factor scores removed entirely, now only quadrature based methods
  for all objects. Also, bfactor returned objects now will estimate all the factors scores instead
  of just the general dimension

* Standard errors for mirt now automatically calculated (borrowed from running a tweaked