@@ -17,8 +17,6 @@ exportClasses(ExploratoryClass)
 exportClasses(MultipleGroupClass)
 exportMethods(anova)
 exportMethods(fitted)
-exportMethods(fscores)
-exportMethods(itemplot)
 exportMethods(residuals)
 exportMethods(summary)
 import(GPArotation)
