@@ -1,14 +1,14 @@
-\docType{methods}
 \name{fscores}
 \alias{fscores}
-\alias{fscores,ConfirmatoryClass-method}
-\alias{fscores,ExploratoryClass-method}
-\alias{fscores,MultipleGroupClass-method}
-\alias{fscores-method}
 \title{Methods for Function fscores}
+\usage{
+  fscores(object, rotate = "", full.scores = FALSE,
+    method = "EAP", quadpts = NULL, verbose = TRUE)
+}
 \arguments{
-  \item{object}{a model of class \code{ExploratoryClass} or
-  \code{ConfirmatoryClass}}
+  \item{object}{a computed model object of class
+  \code{ExploratoryClass}, \code{ConfirmatoryClass}, or
+  \code{MultipleGroupClass}}
 
   \item{full.scores}{if \code{FALSE} (default) then a
   summary table with factor scores for each unique pattern
@@ -18,7 +18,8 @@
 
   \item{rotate}{rotation declaration to be used when
   estimating the factor scores. If \code{""} then the
-  \code{object@rotate} default value is used}
+  \code{object@rotate} default value is used (only
+  applicable to \code{ExploratoryClass} objects)}
 
   \item{method}{type of factor score estimation method. Can
   be expected a-posteriori (\code{"EAP"}), Bayes modal
@@ -32,14 +33,6 @@
 \description{
   Computes MAP, EAP, or ML factor scores with a
   multivariate normal prior distribution.
-}
-\section{Methods}{
-  \describe{ \item{fscores}{\code{signature(object =
-  "ExploratoryClass")}}
-  \item{fscores}{\code{signature(object =
-  "ConfirmatoryClass")}}
-  \item{fscores}{\code{signature(object =
-  "MultipleGroupClass")}}}
 }
 \examples{
 \dontrun{
@@ -56,5 +49,4 @@ fullscores <- fscores(mod, full.scores = TRUE, method='MAP')
   Phil Chalmers \email{rphilip.chalmers@gmail.com}
 }
 \keyword{factor.scores}
-\keyword{methods}
 
